Fix align

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@
 	margin-left: -250px;
 	top: 50%;
 	margin-top: -96px;
+	text-align: center;
 }
 .links a {
 	text-decoration: none;
